# unused-function-detector

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
ufd/: __init__.py  __main__.py  cli.py
ufd/core/: __init__.py  detector.py  lsp_client.py  lsp_utils.py  models.py  protocols.py  transport.py  utils.py
ufd/output/: __init__.py  csv_formatter.py  enums.py  formatters.py  json_formatter.py  tree_formatter.py
ufd/output/formatters/: csv_formatter.py  enums.py  formatter_factory.py  json_formatter.py  tree_formatter.py
ufd/output/progress/: callbacks.py  protocols.py
