[project]
name = "unused-function-detector"
version = "0.1.0"
description = "Find unused functions in Python codebases using LSP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jad Haddad", email = "jad.haddad92@gmail.com"},
]
keywords = ["lsp", "python", "static-analysis", "unused-code", "refactoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

test = []

[project.scripts]
ufd = "ufd.cli:app"

[project.urls]
Homepage = "https://github.com/jad-haddad/unused-function-detector"
Repository = "https://github.com/jad-haddad/unused-function-detector"
Documentation = "https://github.com/jad-haddad/unused-function-detector#readme"
"Bug Tracker" = "https://github.com/jad-haddad/unused-function-detector/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ufd"]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.basedpyright]
reportAny = false
reportImplicitOverride = false
reportMissingSuperCall = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportUnannotatedClassAttribute = false
reportExplicitAny = false
